# ocr-captcha-v3

./: .envrc  .gitignore  .ruff.toml  README.md  device.py  image.py  main.py  mps.py  pretrained.py  pyproject.toml  solver.py
